# papet

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE.txt  README.md  build.sh
src/: CMakeLists.txt
src/applications/: ApplicationInterface.cpp  ApplicationInterface.hpp  ApplicationKinetics.cpp  ApplicationKinetics.hpp  ApplicationKineticsKmer.cpp  ApplicationKineticsKmer.hpp  ApplicationKineticsWig.cpp  ApplicationKineticsWig.hpp  ApplicationModelKinetic.cpp  ApplicationModelKinetic.hpp  ApplicationModelKineticTxt.cpp  ApplicationModelKineticTxt.hpp  ApplicationModelSequence.cpp  ApplicationModelSequence.hpp  ApplicationModelSequenceTxt.cpp  ApplicationModelSequenceTxt.hpp  ApplicationPapet.cpp  ApplicationPapet.hpp  ApplicationPredict.cpp  ApplicationPredict.hpp  utilities.hpp
